# insta-chatbot

./: .env-example  .gitignore  Dockerfile  README.md  instructions.txt  pyproject.toml
app/: main.py
app/api/: deps.py
app/core/: config.py  logger.py
app/domain/: errors.py  message_handler.py
app/infrastructure/: async_queue.py  db_config.py  db_queries.py  grok_client.py  instagram_client.py  models.py  schemas.py
app/ports/: llm_port.py
app/services/: ig_client_factory.py  message_responder.py
tests/api/: test_message.py
